--- a/Part-2/phonebook/src/index.css
+++ b/Part-2/phonebook/src/index.css
@@ -8,6 +8,7 @@
     padding: 10px;
     border: 3px solid green;
     border-radius: 5px;
+    margin-bottom: 10px;
 }
 
 .error {
@@ -20,4 +21,5 @@
     padding: 10px;
     border: 3px solid red;
     border-radius: 5px;
+    margin-bottom: px;
 }
